crates/kply-cli/tests/snapshots/cli__route_cleanup_without_namespace_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "cleanup": false,
  "cleanup_selector": {
    "matchLabels": {
      "kply.dev/managed-by": "kply",
      "kply.dev/session-id": "checkout-plan"
    }
  },
  "cleanup_target": null,
  "mutation": "not_applied",
  "route_kind": "HTTPRoute",
  "session_id": "checkout-plan",
  "status": "planned"
}
