crates/kply-cli/tests/snapshots/cli__route_plan_invalid_session_id.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: route plan

session id must start and end with a lowercase ASCII letter or digit
