crates/kply-cli/tests/snapshots/cli__route_plan_invalid_session_id_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "route_plan",
    "exit_code": 2,
    "message": "session id must start and end with a lowercase ASCII letter or digit"
  }
}
