crates/kply-cli/tests/snapshots/cli__session_cleanup_apply_default_namespace_missing_kubeconfig.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1374
expression: normalize_output(&stderr)
---
kply error: session cleanup apply

kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config
