crates/kply-cli/tests/snapshots/cli__session_cleanup_apply_default_namespace_missing_kubeconfig_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1346
expression: value
---
{
  "error": {
    "code": "session_cleanup_apply",
    "deletion_accepted_resources": [],
    "exit_code": 2,
    "kubernetes_code": "missing_kubeconfig",
    "message": "kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config",
    "pending_resources": []
  }
}
