crates/kply-cli/tests/snapshots/cli__session_cleanup_apply_with_dry_run.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1563
expression: normalize_output(&stderr)
---
kply error: session cleanup

--dry-run cannot be used with --apply
