crates/kply-cli/tests/snapshots/cli__session_cleanup_apply_with_dry_run_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1588
expression: value
---
{
  "error": {
    "code": "session_cleanup",
    "exit_code": 2,
    "message": "--dry-run cannot be used with --apply"
  }
}
